# Aurora-ESP32-Dashboard

./: .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
docs/: HARDWARE.md
main/: CMakeLists.txt  app_main.c  aurora_favicon_data.c  aurora_favicon_data.h  chart_umd_min_js.c  chart_umd_min_js.h  daylog.c  daylog.h  embed_chart_js.py  idf_component.yml  inverter_status_labels.c  inverter_status_labels.h  pcf85063_rtc.c  pcf85063_rtc.h
